--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -24,6 +24,7 @@ jobs:
   frogbot-scan:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4
     - name: Frogbot by JFrog
       uses: jfrog/frogbot@v2.21.7
       env:
