--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -21,7 +21,7 @@ on:
         - debug
 
 jobs:
-  build:
+  maven_build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -46,5 +46,19 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: petclinic-jar
-          path: /home/runner/work/spring-petclinic/spring-petclinic/target/spring-petclinic-3.3.0-SNAPSHOT.jar.original
+          path: ${{ secrets.ARTIFACT_PATH }}/spring-petclinic-3.3.0-SNAPSHOT.jar.original
+      - name: Download petclinic-jar
+        uses: actions/download-artifact@v4
+        with:
+          name: petclinic-jar
+  containerize:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ '17' ]
+    steps:
+       - uses: actions/download-artifact@v4
+         with:
+           name: petclinic-jar
+  
   
