--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -52,6 +52,7 @@ jobs:
         with:
           name: petclinic-jar
   containerize:
+    needs: maven_build
     runs-on: ubuntu-latest
     strategy:
       matrix:
