--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -61,5 +61,6 @@ jobs:
        - uses: actions/download-artifact@v4
          with:
            name: petclinic-jar
+           path: target/
   
   
