--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -62,5 +62,17 @@ jobs:
          with:
            name: petclinic-jar
            path: target/
+       - name: Login to Docker Hub
+         uses: docker/login-action@v3
+         with:
+           username: ${{ secrets.DOCKERHUB_USERNAME }}
+           password: ${{ secrets.DOCKERHUB_TOKEN }}
+       - name: Build and push
+         uses: docker/build-push-action@v6
+         with:
+           context: .
+           push: true
+           tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-petclinic:latest
+        
   
   
