--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -62,6 +62,8 @@ jobs:
          with:
            name: petclinic-jar
            path: target/
+       - name: Set up Docker Buildx
+         uses: docker/setup-buildx-action@v3
        - name: Login to Docker Hub
          uses: docker/login-action@v3
          with:
