--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -62,6 +62,8 @@ jobs:
          with:
            name: petclinic-jar
            path: target/
+       - name: Set up QEMU
+         uses: docker/setup-qemu-action@v3    
        - name: Set up Docker Buildx
          uses: docker/setup-buildx-action@v3
        - name: Login to Docker Hub
@@ -72,7 +74,6 @@ jobs:
        - name: Build and push
          uses: docker/build-push-action@v6
          with:
-           context: .
            push: true
            tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-petclinic:latest
         
