--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -47,10 +47,6 @@ jobs:
         with:
           name: petclinic-jar
           path: ${{ secrets.ARTIFACT_PATH }}/spring-petclinic-3.3.0-SNAPSHOT.jar.original
-      - name: Download petclinic-jar
-        uses: actions/download-artifact@v4
-        with:
-          name: petclinic-jar
   containerize:
     needs: maven_build
     runs-on: ubuntu-latest
@@ -61,7 +57,7 @@ jobs:
        - uses: actions/download-artifact@v4
          with:
            name: petclinic-jar
-           path: target/
+           path: /target
        - name: Set up QEMU
          uses: docker/setup-qemu-action@v3    
        - name: Set up Docker Buildx
