--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -57,7 +57,7 @@ jobs:
        - uses: actions/download-artifact@v4
          with:
            name: petclinic-jar
-           path: target/
+           path: target
        - name: Set up QEMU
          uses: docker/setup-qemu-action@v3    
        - name: Set up Docker Buildx
