--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -70,6 +70,7 @@ jobs:
        - name: Build and push
          uses: docker/build-push-action@v6
          with:
+           context: .
            push: true
            tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-petclinic:latest
         
