--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -54,6 +54,7 @@ jobs:
       matrix:
         java: [ '17' ]
     steps:
+       - uses: actions/checkout@v4
        - uses: actions/download-artifact@v4
          with:
            name: petclinic-jar
