--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -68,12 +68,18 @@ jobs:
          with:
            username: ${{ secrets.DOCKERHUB_USERNAME }}
            password: ${{ secrets.DOCKERHUB_TOKEN }}
-       - name: Build and push
-         uses: docker/build-push-action@v2
-         with:
-           context: .
-           push: true
-           tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-petclinic:latest
+ #      - name: Build and push
+ #        uses: docker/build-push-action@v2
+ #        with:
+ #          context: .
+ #          push: true
+ #         tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-petclinic:latest
+       - name: Build and push     
+         run: |
+            docker buildx build \
+             -t "latest" \
+             -f Dockerfile \
+             --push .
         
   
   
