--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -58,7 +58,7 @@ jobs:
        - uses: actions/download-artifact@v4
          with:
            name: petclinic-jar
-           path: target
+  #         path: target
        - name: Set up QEMU
          uses: docker/setup-qemu-action@v3    
        - name: Set up Docker Buildx
@@ -68,18 +68,13 @@ jobs:
          with:
            username: ${{ secrets.DOCKERHUB_USERNAME }}
            password: ${{ secrets.DOCKERHUB_TOKEN }}
- #      - name: Build and push
- #        uses: docker/build-push-action@v2
- #        with:
- #          context: .
- #          push: true
- #         tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-petclinic:latest
-       - name: Build and push     
-         run: |
-            docker buildx build \
-             -t "latest" \
-             -f Dockerfile \
-             --push .
+       - name: Build and push
+         uses: docker/build-push-action@v6
+         with:
+           context: .
+           push: true
+           tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-petclinic:latest
+
         
   
   
