--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -54,6 +54,7 @@ jobs:
       matrix:
         java: [ '17' ]
     steps:
+       - uses: actions/checkout@v4
        - name: Set up QEMU
          uses: docker/setup-qemu-action@v3    
        - name: Set up Docker Buildx
