--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -64,12 +64,23 @@ jobs:
          with:
            username: ${{ secrets.DOCKERHUB_USERNAME }}
            password: ${{ secrets.DOCKERHUB_TOKEN }}
-       - name: Build and push
+       - name: Build and push to Dockerhub
          uses: docker/build-push-action@v6
          with:
            context: .
            push: true
            tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-petclinic:latest
+       - name: Login to JFROG Artifactory
+         uses: docker/login-action@v3
+         with:
+           username: ${{ secrets.JFROG_LOGIN }}
+           password: ${{ secrets.JFROG_PASSWORD }}    
+       - name: Build and push to JFROG    
+         uses: docker/build-push-action@v6
+         with:
+           context: .
+           push: true
+           tags: ${{ secrets.JF_URL }}/spring-petclinic:latest
 
         
   
