--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -73,6 +73,7 @@ jobs:
        - name: Login to JFROG Artifactory
          uses: docker/login-action@v3
          with:
+           registry: ${{ secrets.JF_URL }}
            username: ${{ secrets.JFROG_LOGIN }}
            password: ${{ secrets.JFROG_PASSWORD }}    
        - name: Build and push to JFROG    
