--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -73,7 +73,7 @@ jobs:
        - name: Login to JFROG Artifactory
          uses: docker/login-action@v3
          with:
-           registry: ${{ secrets.JF_URL }}
+           registry: ${{ secrets.ARTIFACTORY_URL }}
            username: ${{ secrets.JFROG_LOGIN }}
            password: ${{ secrets.JFROG_PASSWORD }}    
        - name: Build and push to JFROG    
@@ -81,7 +81,7 @@ jobs:
          with:
            context: .
            push: true
-           tags: ${{ secrets.JF_URL }}/spring-petclinic:latest
+           tags: ${{ secrets.ARTIFACTORY_URL }}/spring-petclinic:latest
 
         
   
